feat: beautifully written golang backend 🙃

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,5 +39,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
       - DATABASE_HOST=${DB_HOST}
+    ports:
+      - "5432:5432"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
